final push to check resolution size

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
+    <style>
+
+
+    </style>
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -43,7 +48,7 @@
             <div class="header-left" id="story-header">
                 <a href="#" id="top1"></a>
             </div>
-            <div class="header-right">The Metamorphosis Story</div>
+            <div class="header-right">Listen to our story, join our adventure</div>
         </div>
 
         <div class="spacing-2"></div>
@@ -134,7 +139,7 @@
             <div class="header-left" id="highlight-header">
                 <a href="#" id="top2"></a>
             </div>
-            <div class="header-right">Hightlights of our Metamorphosis 2018</div>
+            <div class="header-right">What to expect when you join us for Metamorphosis</div>
         </div>
 
         <div class="spacing-2"></div>
@@ -187,7 +192,7 @@
             <div class="header-left" id="testimonial-header">
                 <a href="#" id="top3"></a>
             </div>
-            <div class="header-right">Hear what our participants have to say!</div>
+            <div class="header-right">Hear what our participants have to say</div>
         </div>
         <div class="spacing-2"></div>
         <div class="container">
@@ -195,7 +200,7 @@
                 <span class="title">Testimonials</span>
             </div>
             <div class="spacing-1"></div>
-            <div class="col-md-12" style="margin-bottom: 40px;">
+            <div class="col-md-12" style="margin-bottom: 40px; padding: 0px 10%;">
                 <div class="col-md-4">
                     <div class="member testimonial-active" id="testimonial-1">
                         <img class="img-responsive testi-img" src="Images/testimonial-1.jpg">
@@ -226,11 +231,15 @@
 
             <div class='spacing-1'></div>
             <div class="col-md-12" style="margin-bottom: 80px;">
-                <div class="col-md-1 testimonial-comma">,,</div>
+                <div class="col-md-1 testimonial-comma" style="text-align: left;margin-top: -70px;">
+                    <span>,,</span>
+                </div>
                 <div class="col-md-10">
                     <span class=" testimonial-para">Meta Camp 2017 was a blast! I had a great time making new friends within the SIS community, with amazing facilitators that hyped up the mood and helped our group bond. I really enjoyed all the games and activities during the camp, especially Beach Day at Sentosa on Day 2 of Meta Camp.</span>
                 </div>
-                <div class="col-md-1 testimonial-comma">,,</div>
+                <div class="col-md-1 testimonial-comma" style="text-align: right;margin-top: -70px;">
+                    <span>,,</span>
+                </div>
             </div>
         </div>
     </div>
@@ -241,7 +250,7 @@
             </div>
             <div class="header-right">Improve your brand and sponsor the next metamorphosis camp</div>
         </div>
-        <div class="spacing-2"></div>
+        <div class="spacing-1"></div>
         <div class="container">
             <div class="row row-title">
                 <span class="title">Outreach Numbers</span>
@@ -289,12 +298,12 @@
 
             </div>
             <div class="spacing-2"></div>
-            <div class="row row-title">
+            <div class="row row-title" style="padding: 0px 10%;">
                 <span class="title">Our 2018 Sponsors</span><br/>
                 <span class="sponsorship-title" style="color:whitesmoke">Platinum Sponsors</span>
                 <div class="spacing-1"></div>
 
-                <div class="col-md-12 sponsor-row" style="margin-bottom: 70px;">
+                <div class="col-md-12 sponsor-row" style="margin-bottom: 40px;">
                     <div class="col-md-1"></div>
                     <div class="col-md-2 sponsor-column"><img class="img-responsive" src="Images/Sponsors/Plat-1.png"></div>
                     <div class="col-md-2 sponsor-column"><img class="img-responsive" src="Images/Sponsors/plat-2.png"></div>
@@ -307,7 +316,7 @@
 
                 <span class="sponsorship-title" style="color:#eeb214">Gold Sponsors</span>
                 <div class="spacing-1"></div>
-                <div class="col-md-12 sponsor-row" style="margin-bottom: 70px;">
+                <div class="col-md-12 sponsor-row" style="margin-bottom: 40px;">
                     <div class="col-md-2"><img class="img-responsive" src="Images/Sponsors/Gold-1.png"></div>
                     <div class="col-md-2"><img class="img-responsive" src="Images/Sponsors/Gold-2.png"></div>
                     <div class="col-md-2"><img class="img-responsive" src="Images/Sponsors/gold-3.png"></div>
@@ -354,7 +363,10 @@
         </div>
     </div>
     <div class="close-button" style="opacity:0; display:none;">
-        <span style="font-family: Raleway;">X</span>
+        <span>X</span>
+    </div>
+    <div class="bottom-info">
+        <span>Created by: Ong Ming Hao (Michael) | Best Viewed in 1600px X 900px</span>
     </div>
 </body>
 
