--- a/index.html
+++ b/index.html
@@ -566,58 +566,58 @@
                     <img class="img-responsive" src="Images/Story/Story-1.jpg">
                 </div>
                 <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-2.jpg">
+                    <img class="img-responsive" src="Images/Story/story-2.jpg">
                 </div>
                 <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-3.jpg">
+                    <img class="img-responsive" src="Images/Story/story-3.jpg">
                 </div>
                 <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-4.jpg">
-                </div>
-            </div>
-
-            <div class="col-md-12 photogallery">
-                <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-5.jpg">
-                </div>
-                <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-6.jpg">
-                </div>
-                <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-7.jpg">
-                </div>
-                <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-8.jpg">
+                    <img class="img-responsive" src="Images/Story/story-4.jpg">
                 </div>
             </div>
 
             <div class="col-md-12 photogallery">
                 <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-9.jpg">
+                    <img class="img-responsive" src="Images/Story/story-5.jpg">
                 </div>
                 <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-10.jpg">
+                    <img class="img-responsive" src="Images/Story/story-6.jpg">
                 </div>
                 <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-11.jpg">
+                    <img class="img-responsive" src="Images/Story/story-7.jpg">
                 </div>
                 <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-12.jpg">
+                    <img class="img-responsive" src="Images/Story/story-8.jpg">
                 </div>
             </div>
 
             <div class="col-md-12 photogallery">
                 <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-13.jpg">
+                    <img class="img-responsive" src="Images/Story/story-9.jpg">
                 </div>
                 <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-14.jpg">
+                    <img class="img-responsive" src="Images/Story/story-10.jpg">
                 </div>
                 <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-15.jpg">
+                    <img class="img-responsive" src="Images/Story/story-11.jpg">
                 </div>
                 <div class="col-md-3">
-                    <img class="img-responsive" src="Images/Story/Story-16.jpg">
+                    <img class="img-responsive" src="Images/Story/story-12.jpg">
+                </div>
+            </div>
+
+            <div class="col-md-12 photogallery">
+                <div class="col-md-3">
+                    <img class="img-responsive" src="Images/Story/story-13.jpg">
+                </div>
+                <div class="col-md-3">
+                    <img class="img-responsive" src="Images/Story/story-14.jpg">
+                </div>
+                <div class="col-md-3">
+                    <img class="img-responsive" src="Images/Story/story-15.jpg">
+                </div>
+                <div class="col-md-3">
+                    <img class="img-responsive" src="Images/Story/story-16.jpg">
                 </div>
             </div>
         </div>
