--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
         <span>X</span>
     </div>
     <div class="bottom-info">
-        <span>Created by: Ong Ming Hao (Michael) | Best Viewed in 1600px X 900px</span>
+        <span>Created by: Ong Ming Hao (Michael) | Best Viewed in 1600px X 900px | Not Optimized for Mobile </span>
     </div>
 </body>
 
